--- a/egzamin3/styl_1.css
+++ b/egzamin3/styl_1.css
@@ -1,6 +1,9 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 1fr 450px .5fr;
 }
 
 header, footer{
@@ -8,14 +11,18 @@ header, footer{
     color: white;
     padding: 5px;
     font-size: 130%;
-    text-align: center;
+    display: grid;
+    place-items: center;
     clear: both;
+}
+
+.cont{
+    display: grid;
+    grid-template-columns: 55% 45%;
 }
 
 .lewy{
     background: #EFEFEF;
-    width: 55%;
-    float: left;
 }
 
 .jeden{
@@ -28,10 +35,8 @@ header, footer{
 
 .prawy{
     background: #4FB3BF;
-    width: 45%;
-    height: calc(450px + 18.7px * 2);
+    height: 450px;
     text-align: center;
-    float: left;
     display: flex;
     justify-content: center;
     align-items: center;
