--- a/egzamin3/styl_1.css
+++ b/egzamin3/styl_1.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     height: 100vh;
     display: grid;
-    grid-template-rows: 1fr 450px .5fr;
+    grid-template-rows: .1fr 1fr .1fr;
 }
 
 header, footer{
@@ -14,6 +14,10 @@ header, footer{
     display: grid;
     place-items: center;
     clear: both;
+}
+
+header > *, footer > *{
+    margin: 0;
 }
 
 .cont{
@@ -35,7 +39,6 @@ header, footer{
 
 .prawy{
     background: #4FB3BF;
-    height: 450px;
     text-align: center;
     display: flex;
     justify-content: center;
